--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="http://www.hiit.fi/sites/all/themes/hiit/favicon.ico" type="image/x-icon" />
 <style type="text/css">
 
-@import "style.css";
+@import "hiit.css";
 
 h1 { text-align: center }
 
@@ -91,7 +91,7 @@ There are <a href="http://twitter.com/contextlogger/status/49814815518097408">Co
 <h2>Introduction</h2>
 
 <p>
-<em>ContextLogger2</em> (CL2) is a tool for smartphone data collection, created primarily with research purposes in mind. It can, for instance, be used in user studies for collecting and recording context information such as GPS and GSM cell ID readings, keypress times, application focus changes, etc. The software presently supports <a href="http://www.symbian.org/">Symbian OS</a> based phones. It was developed as a small <a href="http://www.hiit.fi/">HIIT</a> internal project.
+<em>ContextLogger2</em> (CL2) is a tool for smartphone data collection, created primarily with research purposes in mind. It can, for instance, be used in user studies for collecting and recording context information such as GPS and GSM cell ID readings, keypress times, application focus changes, etc. The software presently supports <a href="http://symbian.nokia.com/">Symbian OS</a> based phones. It was developed as a small <a href="http://www.hiit.fi/">HIIT</a> internal project.
 </p>
 
 <p>
