index page now root page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="http://www.hiit.fi/sites/all/themes/hiit/favicon.ico" type="image/x-icon" />
 <style type="text/css">
 
-@import "hiit.css";
+@import "contextlogger2/hiit.css";
 
 h1 { text-align: center }
 
@@ -51,25 +51,25 @@ h1, h2 { clear: both }
 
   <table class="navmenu" summary="about menu">
     <tr><td><span class="navtitle">about</span></td></tr>
-    <tr><td><a class="navitem" href="features.html">features</a></td></tr>
-    <tr><td><a class="navitem" href="status.html">status</a></td></tr>
-    <tr><td><a class="navitem" href="known_bugs.html">bugs</a></td></tr>
-    <tr><td><a class="navitem" href="roadmap.html">roadmap</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/features.html">features</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/status.html">status</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/known_bugs.html">bugs</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/roadmap.html">roadmap</a></td></tr>
   </table>
 
   <table class="navmenu" summary="docs menu">
     <tr><td><span class="navtitle">docs</span></td></tr>
-    <tr><td><a class="navitem" href="quick_start.html">quick start</a></td></tr>
-    <tr><td><a class="navitem" href="guides.html">guides</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/quick_start.html">quick start</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/guides.html">guides</a></td></tr>
     <tr><td><a class="navitem" href="http://www.terohasu.net/cl2-tr-abstract.html">tech report</a></td></tr>
-    <tr><td><a class="navitem" href="faq.html">faq</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/faq.html">faq</a></td></tr>
   </table>
 
   <table class="navmenu" summary="code menu">
     <tr><td><span class="navtitle">code</span></td></tr>
-    <tr><td><a class="navitem" href="license.html">license</a></td></tr>
-    <tr><td><a class="navitem" href="demo.html">binaries</a></td></tr>
-    <tr><td><a class="navitem" href="source.html">source</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/license.html">license</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/demo.html">binaries</a></td></tr>
+    <tr><td><a class="navitem" href="contextlogger2/source.html">source</a></td></tr>
   </table>
 
   <table class="navmenu" summary="community menu">
